--- a/EventPlanner/composer.json
+++ b/EventPlanner/composer.json
@@ -15,6 +15,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "^2.3",
+        "laravel/livewire-starter-kit": "^1.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
